Fucking fuckity fuck

--- a/HausBauGbR/src/main/webapp/WEB-INF/sidebar.xhtml
+++ b/HausBauGbR/src/main/webapp/WEB-INF/sidebar.xhtml
@@ -12,7 +12,7 @@
         <div class="nano">
             <div class="nano-content sidebar-scroll-content">
                 <div class="logo">
-                    <img src="#{request.contextPath}/images/HausBau GbR.jpg" width="213"/> 
+                    <img src="#{request.contextPath}/images/HausBau_GbR.jpg" width="213"/> 
                 </div> 
 
                 <div class="menu" style="margin-top: 160px;">
