--- a/HausBauGbR/src/main/webapp/login.xhtml
+++ b/HausBauGbR/src/main/webapp/login.xhtml
@@ -20,7 +20,7 @@
     <h:body styleClass="login-body">
         <h:form id="contentForm">
             <div id="login-wrapper">
-                <img src="#{request.contextPath}/images/HausBau GbR.jpg" alt="" width="200px"/> 
+                <img src="#{request.contextPath}/images/HausBau_GbR.jpg" alt="" width="200px"/> 
 
                 <div id="login-container">
                     <span class="title">HausBau GbR</span>
