--- a/HausBauGbR/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/HausBauGbR/src/main/webapp/WEB-INF/topbar.xhtml
@@ -19,23 +19,41 @@
         </a>
         
         <div id="topbar-icons" class="animated">
-            <span class="topbar-search">
-                <input type="text" placeholder="Search"/>
-                <span class="topbar-search-icon fa fa-search"></span>
+            <span>
+                <a href="mietobjekte.xhtml" >
+                    <span class="topbar-item-text">Mietobjekte</span>
+                    <span>Mietobjekte</span>
+                    <span class="layout-menuitem-icon pi pi-fw pi-building"></span>
+                </a>
             </span>
-            <a href="#">
-                <span class="topbar-item-text">Messages</span>
-                <span class="topbar-icon fa fa-envelope-o animated swing"></span>
-                <span class="topbar-badge animated rubberBand">5</span>
-            </a>
-            <a href="#">
-                <span class="topbar-item-text">Settings</span>
-                <span class="topbar-icon fa fa-gear"></span>
-            </a>
-            <a href="#">
-                <span class="topbar-item-text">User</span>
-                <span class="topbar-icon fa fa-user"></span>
-            </a>
+            <span>
+                <a href="mieter.xhtml" >
+                    <span class="topbar-item-text">Mieter</span>
+                    <span>Mieter</span>
+                    <span class="layout-menuitem-icon pi pi-fw pi-user"></span>
+                </a>
+            </span>
+            <span>
+                <a href="mietverträge.xhtml" >
+                    <span class="topbar-item-text">Mietverträge</span>
+                    <span>Mietverträge</span>
+                    <span class="layout-menuitem-icon pi pi-fw pi-folder"></span>
+                </a>
+            </span>
+            <span>
+                <a href="verantwortlichkeiten.xhtml" >
+                    <span class="topbar-item-text">Verantwortlichkeiten</span>
+                    <span>Verantwortlichkeiten</span>
+                    <span class="layout-menuitem-icon pi pi-fw pi-briefcase"></span>
+                </a>
+            </span>
+            <span>
+                <a href="admin.xhtml" >
+                    <span class="topbar-item-text">Admin</span>
+                    <span>Admin</span>
+                    <span class="layout-menuitem-icon pi pi-fw pi-cog"></span>
+                </a>
+            </span>
         </div>
         
     </div>
