--- a/HausBauGbR/src/main/webapp/backend/benutzer.xhtml
+++ b/HausBauGbR/src/main/webapp/backend/benutzer.xhtml
@@ -11,8 +11,8 @@
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <h1>Placeholder Landing</h1>
-                    <p>Placeholder for the landing page</p> 
+                    <h1>Mietobjekte</h1>
+                    <p>Blub.</p> 
                 </div>
             </div>
         </div>
