--- a/HausBauGbR/src/main/webapp/backend/mietobjekte.xhtml
+++ b/HausBauGbR/src/main/webapp/backend/mietobjekte.xhtml
@@ -46,7 +46,7 @@
                                     <i class="pi pi-wrench"></i>
                                 </p:commandLink>    
                                 &nbsp;
-                                <p:commandLink oncomplete="PF('dlgRoom').show();" action="#{mietobjekt.setItem(item)}" update=":mietvertragModalDialogForm">
+                                <p:commandLink oncomplete="PF('dlgMietvertrag').show();" action="#{mietobjekt.setItem(item)}" update=":mietvertragModalDialogForm">
                                     <i class="pi pi-folder"></i>
                                 </p:commandLink>    
                                 &nbsp;
@@ -140,7 +140,7 @@
 </p:dialog>     
   
         
-<p:dialog id="mietvertragDialog" header="Mietvertrag" widgetVar="dlgRoom" modal="true" position="center,top" style="margin-top: 40px;">                  
+<p:dialog id="mietvertragDialog" header="Mietvertrag" widgetVar="dlgMietvertrag" modal="true" position="center,top" style="margin-top: 40px;">                  
     <div style="width: 650px; margin: 10px 10px 10px 10px;">
     <h:form id="mietvertragModalDialogForm"> 
 
@@ -158,7 +158,7 @@
                     <h:outputText value="#{mietvertragItem.typ}" />   
                 </p:column>
                 <p:column style="width: 110px; text-align: center;"> 
-                    <p:commandLink action="#{mietvertrag.addMietobjekt(mietvertragItem, mietobjekt.item)}" update=":contentForm" oncomplete="PF('dlgRoom').hide();" >
+                    <p:commandLink action="#{mietvertrag.addMietobjekt(mietvertragItem, mietobjekt.item)}" update=":contentForm" oncomplete="PF('dlgMietvertrag').hide();" >
                         <i class="pi pi-plus"></i>
                     </p:commandLink>                                 
                 </p:column>
@@ -167,9 +167,9 @@
         </p:scrollPanel>
         <br/><br/>                      
   
-        <p:commandButton value="Zuordnen" style="width: 120px;" action="#{mietobjekt.saveItem()}" oncomplete="PF('dlgRoom').hide();" update=":contentForm, messageBox"/>  
+        <p:commandButton value="Zuordnen" style="width: 120px;" action="#{mietobjekt.saveItem()}" oncomplete="PF('dlgMietvertrag').hide();" update=":contentForm, messageBox"/>  
         &nbsp;
-        <p:commandButton value="Schlie&szlig;en" style="width: 120px;" onclick="PF('dlgRoom').hide();" immediate="true"/>  
+        <p:commandButton value="Schlie&szlig;en" style="width: 120px;" onclick="PF('dlgMietvertrag').hide();" immediate="true"/>  
     </h:form>                           
     </div>               
 </p:dialog>     
