--- a/HausBauGbR/src/main/webapp/backend/Mietverträge.xhtml
+++ b/HausBauGbR/src/main/webapp/backend/Mietverträge.xhtml
@@ -47,7 +47,7 @@
                                 </p:commandLink>    
                                 &nbsp;
                                 <p:commandLink oncomplete="PF('dlgMietobjekt').show();" action="#{mietvertrag.setItem(item)}" update=":mietobjektModalDialogForm">
-                                    <i class="pi pi-desktop"></i>
+                                    <i class="pi pi-building"></i>
                                 </p:commandLink>      
                                 &nbsp;
                                 <p:commandLink oncomplete="PF('dlgMieter').show();" action="#{mietvertrag.setItem(item)}" update=":mieterModalDialogForm">
