--- a/HausBauGbR/src/main/webapp/backend/mietobjekte.xhtml
+++ b/HausBauGbR/src/main/webapp/backend/mietobjekte.xhtml
@@ -264,7 +264,7 @@
     </div>               
 </p:dialog>    
 
-<p:dialog id="dokumentDialog" header="Reports" widgetVar="dlgDokument" modal="true" position="center,top" style="margin-top: 40px;">                  
+<p:dialog id="dokumentDialog" header="Dokumente" widgetVar="dlgDokument" modal="true" position="center,top" style="margin-top: 40px;">                  
     <div style="width: 650px; margin: 10px 10px 10px 10px;">
     <h:form id="dokumentModalDialogForm"> 
 
