upper case bullshit

--- a/HausBauGbR/src/main/webapp/backend/Dokumente.xhtml
+++ b/HausBauGbR/src/main/webapp/backend/Dokumente.xhtml
@@ -11,7 +11,7 @@
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <h1>Mietobjekte</h1>
+                    <h1>Dokumente</h1>
                     <p>Blub.</p> 
                 </div>
             </div>
