--- a/HausBauGbR/src/main/webapp/backend/empty.xhtml
+++ b/HausBauGbR/src/main/webapp/backend/empty.xhtml
@@ -12,7 +12,7 @@
             <div class="ui-g-12">
                 <div class="card">
                     <h1>Empty Page</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p> 
+                    <p>Use this page to start from scratch and place your custom content. Not used.</p> 
                 </div>
             </div>
         </div>
