--- a/HausBauGbR/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/HausBauGbR/src/main/webapp/WEB-INF/topbar.xhtml
@@ -27,14 +27,14 @@
                 </a>
             </span>
             <span>
-                <a href="mieter.xhtml" >
+                <a href="Mieter.xhtml" >
                     <span class="topbar-item-text">Mieter</span>
                     <span>Mieter</span>
                     <span class="layout-menuitem-icon pi pi-fw pi-user"></span>
                 </a>
             </span>
             <span>
-                <a href="mietverträge.xhtml" >
+                <a href="Mietverträge.xhtml" >
                     <span class="topbar-item-text">Mietverträge</span>
                     <span>Mietverträge</span>
                     <span class="layout-menuitem-icon pi pi-fw pi-folder"></span>
