--- a/HausBauGbR/src/main/webapp/backend/admin.xhtml
+++ b/HausBauGbR/src/main/webapp/backend/admin.xhtml
@@ -119,7 +119,7 @@
         </p:scrollPanel>
         <br/><br/>                      
   
-        <p:commandButton value="Speichern" style="width: 120px;" action="#{mietobjekt.saveItem()}" oncomplete="PF('dlgEdit').hide();" update=":contentForm, messageBox"/>
+        <p:commandButton value="Speichern" style="width: 120px;" action="#{benutzer.saveItem()}" oncomplete="PF('dlgEdit').hide();" update=":contentForm, messageBox"/>
         &nbsp;
         <p:commandButton value="Schlie&szlig;en" style="width: 120px;" onclick="PF('dlgEdit').hide();" immediate="true"/>  
     </h:form>                           
